# scrypto-audit-kit

./: .aider.conf.yml  .aiderignore  .env.example  .gitignore  .markdownlint.json  .mcp.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  ROADMAP.md  VISION.md  audit.sh  pyproject.toml
.claude/skills/scrypto-pre-audit/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  new-pattern.md  trial-report.md
.github/workflows/: blueprint.yml  lint.yml  pre-audit.yml  release.yml
attestation/: Cargo.toml  README.md
attestation/src/: lib.rs
attestation/tests/: property_tests.rs
docs/: README.md  agents.md  architecture.md  backends.md  ci.md  mcp-tools.md  quickstart.md  sdk.md  static-analysis.md
examples/: README.md  vulnerable-vault.pre-audit.json  vulnerable-vault.pre-audit.md
examples/agents/: README.md  audit_fix_verify.py  mcp_client.py  static_gate.py
examples/ci/: pre-audit.yml
examples/vulnerable-vault/: Cargo.toml  README.md
examples/vulnerable-vault/src/: lib.rs
examples/vulnerable-vault/tests/: vault.rs
prompts/: audit.md  checklist.md
references/: README.md  caviarnine-hyperstake-patterns.md  ignition-patterns.md  radix-scrypto-knowledge.md  strategy-vault-threat-model.md  subintents-patterns.md
schema/: audit-report.schema.json  mcp-tools.schema.json
tests/: test_attest.py  test_backends.py  test_examples.py  test_gen_tests.py  test_mcp_tools.py  test_packaging.py  test_sak_lib.py  test_security.py  test_static_analysis.py  test_tool_contracts.py
