[package]
name = "attestation-registry"
version = "0.1.0"
edition = "2021"

# Reference implementation of the scrypto-audit-kit L3 attestation primitive.
# Build/test/audit on Linux (Mac has a known bulk-memory WASM issue). See README.md.

[dependencies]
scrypto = { version = "1.3.0" }

[dev-dependencies]
scrypto-test = { version = "1.3.0" }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = "z"
lto = true
