[package]
name = "vulnerable-vault"
version = "0.1.0"
edition = "2021"

# ⚠️ This package is DELIBERATELY VULNERABLE. It exists only as a fixture for
# scrypto-audit-kit — every issue in src/lib.rs is planted. Do not deploy or copy.

[dependencies]
scrypto = { version = "1.3.0" }

[dev-dependencies]
scrypto-test = { version = "1.3.0" }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
opt-level = "z"
lto = true
